# ArduinoCore-avr

./: Makefile.am  README.md  configure.ac
cores/arduino/: Makefile.am
libraries/EEPROM/src/: Makefile.am
variants/: pins_arduino.h
